// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncompleteChecksSection renders 1`] = `
<CollapsibleResultSection
  badgeCount={3}
  cardRuleResults={
    [
      {},
      {},
      {},
    ]
  }
  containerClassName="result-section"
  containerId="incomplete-checks-section"
  deps={{}}
  headingLevel={3}
  outcomeType="incomplete"
  title="Incomplete checks"
/>
`;

exports[`IncompleteChecksSection renders when card data is missing 1`] = `
<CollapsibleResultSection
  badgeCount={0}
  cardRuleResults={[]}
  containerClassName="result-section"
  containerId="incomplete-checks-section"
  deps={{}}
  headingLevel={3}
  outcomeType="incomplete"
  title="Incomplete checks"
/>
`;
